tests/error/linear_errors/field_copy2.err
Error: Copy violation (at $FILE:18:14)
   | 
16 | @guppy(module)
17 | def foo(s: MyStruct @owned) -> tuple[MyStruct, qubit]:
18 |     return s, s.q
   |               ^^^ Field `s.q` with non-copyable type `qubit` cannot be
   |                   returned ...
   | 
18 |     return s, s.q
   |            - since it was already returned here

Guppy compilation failed due to 1 previous error
